[package]
name = "validate"
version = "0.2.0"
authors = ["Nathan Fuchs <fuchsnj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fuchsnj/validate"
homepage = "https://github.com/fuchsnj/validate"
documentation = "https://github.com/fuchsnj/validate"
license = "MIT"
description = """
A library to easily validate user input
"""

[dependencies]
regex = "*"
