[package]
name = "validate"
version = "0.6.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fuchsnj/validate"
homepage = "https://github.com/fuchsnj/validate"
documentation = "https://github.com/fuchsnj/validate"
license = "MIT/Apache-2.0"
description = """
A library to easily validate user input
"""

[dependencies]
regex = "0.1.47"
